<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/languagemenu"
        android:icon="@drawable/language_24"
        android:title="@string/langu"/>
    <item android:id="@+id/update_menu"
        android:icon="@drawable/update_24"
        android:title="@string/updateapp"/>
      <item android:id="@+id/achievement_menu"
        android:icon="@drawable/achievements"
        android:title="Achievement"/>
    <item android:id="@+id/allbloodgroups_menu"
        android:icon="@drawable/blood_drop"
        android:title="@string/allbloodgroups"/>

    <item android:id="@+id/updateActivityMenu"
        android:icon="@drawable/check_circle_24"
        android:title="@string/availablestatus"/>

    <item android:id="@+id/favouriteMenu"
        android:icon="@drawable/favorite_24"
        android:title="@string/donfavo"/>

    <item android:id="@+id/district_donor"
        android:icon="@drawable/staff48"
        android:title="@string/mydisdon"/>

    <item android:id="@+id/upzilla_donor"
        android:icon="@drawable/staff48"
        android:title="@string/myupzdon"/>

    <item android:id="@+id/union_donor"
        android:icon="@drawable/staff48"
        android:title="@string/myunion"/>

    <item android:id="@+id/compatible"
        android:icon="@drawable/compatiable48"
        android:title="@string/grpmatchdon"/>


 <item android:title="@string/blood_groups">
     <menu >
         <group android:checkableBehavior="single">

             <item android:id="@+id/aplus"
                 android:icon="@drawable/aplus"
                 android:title="@string/a_positive"/>
             <item android:id="@+id/aminus"
                 android:icon="@drawable/aminus"
                 android:title="@string/a_negative"/>
             <item android:id="@+id/bplus"
                 android:icon="@drawable/bplus"
                 android:title="@string/b_positive"/>
             <item android:id="@+id/bminus"
                 android:icon="@drawable/bminus"
                 android:title="@string/b_negative"/>
             <item android:id="@+id/abplus"
                 android:icon="@drawable/abplus"
                 android:title="@string/ab_positive"/>
             <item android:id="@+id/abminus"
                 android:icon="@drawable/abminus"
                 android:title="@string/ab_negative"/>
             <item android:id="@+id/oplus"
                 android:icon="@drawable/oplus"
                 android:title="@string/o_positive"/>
             <item android:id="@+id/ominus"
                 android:icon="@drawable/ominus"
                 android:title="@string/o_negative"/>

         </group>
     </menu>
 </item>


 <item android:title="@string/account">
     <menu >
         <group android:checkableBehavior="single">

             <item android:id="@+id/profilemenu"
                 android:icon="@drawable/person_24"
                 android:title="@string/profile_menu"/>
             <item android:id="@+id/notification"
                 android:icon="@drawable/notifications_24"
                 android:title="@string/notification"/>
             <item android:id="@+id/logoutmenu"
                 android:icon="@drawable/logout"
                 android:title="@string/logout"/>
             <item android:id="@+id/more_apps_menu"
                 android:icon="@drawable/moreapps_24"
                 android:title="@string/moreapp"/>
             <item android:id="@+id/setting_menu"
                 android:icon="@drawable/settings_24"
                 android:title="@string/setting"/>


         </group>
     </menu>
 </item>
 <item android:title="@string/communicate">
     <menu >
         <group android:checkableBehavior="single">

             <item android:id="@+id/about_menu"
                 android:icon="@drawable/ic_round_error_24"
                 android:title="@string/about"/>
             <item android:id="@+id/policy_menu"
                 android:icon="@drawable/policy_24"
                 android:title="@string/policy"/>
             <item android:id="@+id/share_menu"
                 android:icon="@drawable/share_24"
                 android:title="@string/share"/>
             <item android:id="@+id/rateus_menu"
                 android:icon="@drawable/star_rate_24"
                 android:title="@string/rate_us"/>


         </group>
     </menu>
 </item>

</menu>